reviewers version TICK
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@381 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2598,3 +2598,11 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 	year = {2015}, 
 	note = "[Online; accessed 13-June-2015]"
 }
+
+@misc{INSPIRE,
+	title = {{INSPIRE: High-Energy Physics Literature Database}},
+	howpublished = "\url{http://inspirehep.net}",
+	year = {2015}, 
+	note = "[Online; accessed 13-June-2015]"
+}
+
