--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -56,7 +56,9 @@ We first illustrate the complications
 that can arise with EFTs at colliders by considering an effective interaction
 $$ {\cal L}_\textrm{int} = {(\bar q\gamma_\mu q)(\bar\chiDM\gamma^\mu\chiDM) \over \Mstar^2}
 = (\bar q\gamma_\mu q)(\bar\chiDM\gamma^\mu\chiDM) {g\over \Lambda^2}$$
-that couples quarks and DM $\chi$ fields.\footnote{The \textit{exact} operator chosen is not important.}   The strength of this interaction is
+that couples quarks and DM $\chi$ fields.\footnote{The \textit{exact} operator chosen is not important:
+	as detailed in the following, statements concerning the applicability of an EFT can also be made without a specific relation to simplified models.}  
+The strength of this interaction is
 parametrized by $\displaystyle {1\over \Mstar^2} = {g\over \Lambda^2}$.
 A monojet signature can be generated from this operator
 by applying perturbation theory in the QCD coupling.
@@ -129,7 +131,6 @@ kinematics of the signal and remove events for which the high-mediator-mass appr
 This leads to a smaller effective cross-section, after imposing the event selection of the analysis.  This truncated signal was then used
 to derive a new, more conservative limit on
 $\Mstar$ as a function of $(\mDM, \gDM \gq)$.
-%TODO SM: I am uncomfortable with saying ``ensure the validity.'' CD: me too. However "improve the reliability of the validity" is cumbersome so I changed it.
 
 For the example D5-like operator,
 where the cross section $\sigma$ scales as $\Mstar^{-4}$,
@@ -241,7 +242,7 @@ is the potential violation of unitarity.  An analysis of the operator
 $\displaystyle {\bar{q}\gamma_\mu q\bar\chi\gamma^\mu\chi \over \Mstar^2}$
 provides the limit:
 \be
-\Mstar > \sqrt{s} \sqrt{ {\sqrt{3} \over 4 \pi} \beta(s) },
+\Mstar > \beta(s) \sqrt{s}  \sqrt{ {\sqrt{3} \over 4 \pi}  },
 \ee
 where $\sqrt{s}$ is (maximally) the collider energy and $\beta(s)$ is
 the DM velocity \cite{Shoemaker:2011vi}.
