--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -11,8 +11,8 @@
 
 %Despite the appearance of simplified models, we argue that
 %the model independent approach of the EFTs is still relevant.
-The EFT operators considered in this section do not have a simplified model
-completion for Dirac fermion Dark Matter available to date. 
+The EFT operators considered in this section do not have an implementation 
+of a simplified model completion for Dirac fermion Dark Matter available to date. 
 They provide kinematic distributions that 
 are unique to mono-boson signatures, and that in most cases 
 are not reproduced by an equivalent simplified model.\sidenote{Wherever this is
@@ -77,7 +77,8 @@ such as the one depicted in Figure~\ref{fig:modelMonoHEFT}.
 \end{figure}
 
 Following the notation of~\cite{Carpenter:2012rg},  models
-from this category have a Lagrangian that includes terms such as:
+from this category have a Lagrangian that, after electroweak symmetry breaking, 
+includes terms such as:
 
 \begin{eqnarray}
 \frac{m_W^2}{\Lambda_5^3} ~\bar{\chiDM} \chiDM ~W^{+ \mu} W^{-}_\mu
@@ -85,26 +86,24 @@ from this category have a Lagrangian that includes terms such as:
 \end{eqnarray}
 where $m_Z$ and $m_W$ are the masses of the $Z$ and $W$ boson, $W^{\mu}$ and $Z^{\mu}$
 are the fields of the gauge bosons, $\chiDM$ denotes the Dark Matter fields
-and $\Lambda_5$ is the effective field theory scale~\Todo{The nomenclature in different models differs from literature: 
-	$\Lambda_5$ vs $\lambda$}. Note that these operators are of true dimension 7, 
+and $\Lambda_5$ is the effective field theory scale. Note that these operators are of true dimension 7, 
 but reduce to effective dimension 5 once the Higgs vacuum expectation values, 
 contained in the W and Z mass terms, are inserted.  
 As such, one expects  these that operators would naturally arise in UV complete models where Dark Matter 
 interacts via a Higgs portal where heavy mediators couple to the Higgs or other fields in an extended Higgs sector. 
 In such models the full theory may be expected to contain additional operators with Higgs-Dark Matter couplings~\cite{Djouadi:2012zc}.
-
-Concentrating on mono-gauge boson signals, the above operator induces signatures with 
-\MET in conjunction with Z and W bosons at tree level,
+The above operator also induces signatures with 
+\MET in conjunction with Z and W bosons at tree level, as shown in Fig.~\ref{fig:VPlusMET_EFT},
 while at loop level it induces couplings to photon pairs and $Z \gamma$ through W loops.
 In these models, a clear relation exists between final states with photons, EW bosons
 and Higgs boson. 
 
-As shown in Fig.~\ref{fig:EW_EFT5_Zlep_MET}
+As shown in Fig.~\ref{fig:EW_EFT5_Zlep_MET}, the 
 kinematics of this model can be approximated by that of a simplified model including 
 a high-mass scalar mediator exchanged in the \schannel described in Section~\ref{sub:EW_Scalar}. 
 For this reason, the list of benchmark models with direct boson-DM couplings for photon, Z and W 
-only includes dimension 7 operators: the scalar model with initial state radiation of an EW boson
-is already recommended and its results can be rescaled. 
+only includes dimension 7 operators: if the scalar model with initial state radiation of an EW boson
+is already generated, then its results can be rescaled. 
 
 The Higgs+\MET analysis,
 however, will not consider the scalar simplified model as benchmark, due to the very low sensitivity 
