--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -14,7 +14,7 @@ This signature is also produced by the models described in
 Section~\ref{subsec:EWSpecificModels}. 
 
 Monojet searches are generally more sensitive
-with respect to final states including bosons, due to the much
+with respect to final states including EW bosons, due to the much
 larger rates of signal events featuring quark or gluon radiation with
 respect to radiation of bosons~\cite{Zhou:2013fla},
 in combination with the low branching ratios if leptons from
