--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -203,8 +203,7 @@ strictly necessary for the self-consistency of the model (e.g.  to DM
 and to quarks) are accounted for in the definition of the mediator
 width. We forbid any further decays to other invisible particles of
 the Dark Sector that may increase the width or produce striking, visible signatures. 
-Studies within the Forum
-show that, for cut-and-count analyses, the kinematic distributions of
+Studies within this report show that, for cut-and-count analyses, the kinematic distributions of
 many models, and therefore the sensitivity of these searches, do not depend
 significantly on the mediator width, as long as the width remains smaller
 than the mass of the particle and that narrow mediators are sufficiently light.
@@ -316,7 +315,7 @@ should be included in the results of experimental searches to allow for further 
 It is crucial for the success of the work of this Forum that these studies can be employed as cross-check
 and reference to the theoretical and experimental community interested in early Run-2 searches. 
 For this reason, model files, parameter cards, and cross-sections for the models considered in these studies 
-are publicly available. The SVN repository of the Forum ~\cite{ForumSVN} contains the models and parameter files
+are publicly available. The SVN repository of the Forum~\cite{ForumSVN} contains the models and parameter files
 necessary to reproduce the studies within this report. Details and cross-sections for these models, 
 as a function of their parameters, will be published on HEPData~\cite{HEPData}. 
 
