--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -26,7 +26,7 @@ and is thus a flavor-specific example of a \tchannel model.
 Similar top-flavored models can exist, as e.g. in Refs.~\cite{Kumar:2013hfa,Batell:2013zwa}. 
 In the case where the top coupling is the main DM coupling, 
 the signal is very similar to a signal from a stop quark, since unlike the other t-channel cases there is no top
-in the initial state PDFs. This is the reason why it wasn't considered as an additional model. More recent
+in the initial state parton distribution functions (PDFs). This is the reason why it wasn't considered as an additional model. More recent
 literature shows that other flavor states could also contribute to LHC signals, as shown in Ref.~\cite{Kilic:2015vka},
 but such models will have to be investigate on a longer timescale with respect to that of this Forum. 
 
