--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -58,7 +58,7 @@ Note that, because of the kinematics features of $b$ quark production relative
 to heavy $t$ quark production, a $b\bar b$+DM final state may only yield one
 experimentally visible $b$ quark, leading to a mono-$b$ signature in a model that conserves $b$ flavor.
 
-Dedicated implementations of these models for the works of this Forum are available at LO+PS accuracy,
+Dedicated implementations of these models for the work of this Forum are available at LO+PS accuracy,
 even though the state of the art is set to improve on a timescale beyond that for early Run-2 DM searches
 as detailed in Section~\ref{sec:TTBar_implementation}.
 The studies in this Section have been produced using a leading order model within \madgraph 2.2.2, 
@@ -79,7 +79,7 @@ mediator $p_{T}$ spectra is taken to represent the main kinematics of a model. A
 of benchmarks is to focus on the parameter space where we expect the searches to be sensitive during the 2015 LHC run. 
 Based on a projected integrated luminosity of $30\,{\rm fb}^{-1}$ expected for 2015, we disregard model points with a 
 cross section times branching ratio smaller than $0.1\,{\rm fb}$, corresponding to a minimum of one expected event 
-assuming a 0.1\% signal efficiency. 
+assuming a 0.1\% efficiency times acceptance. 
 
 The kinematics is most dependent on the masses \mdm and $m_{\phi,a}$. Figure~\ref{fig:scanPhi} 
 and~\ref{fig:scanPhiPseudo} show typical dependencies for scalar and pseudoscalar couplings respectively.
