--- a/doc/tex/TheoryUncertainties.tex
+++ b/doc/tex/TheoryUncertainties.tex
@@ -11,7 +11,7 @@ the PDF4LHC recommendation ~\cite{PDF4LHC} of considering the envelope of differ
 for the uncertainty on the various PDFs as well as the uncertainty on the choice of the central value PDF. 
 The Forum has not discussed the uncertainties related to the merging of different samples, nor the uncertainty
 due to the choice of the modeling of the parton shower.  
-This chapter provides technical details on how scale and PDF uncertainties can be assessed 
+This Chapter provides technical details on how scale and PDF uncertainties can be assessed 
 for events generated with \powheg and \madgraph.
 
 %\Todo{This section describes the technical details of how to vary
