--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -1,7 +1,7 @@
 \noindent\href{mailto:nural.akchurin@cern.ch}{Nural Akchurin} 
 \emph{Texas Tech University, USA}\\
-\noindent\href{mailto:juan.alcaraz@cern.ch}{Juan Alcaraz} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:ece.akilli@cern.ch}{Ece Akilli} 
+\emph{Universit\'e de Gen\`eve, D\'epartement de Physique Nucl\'eaire et Corpusculaire, Switzerland}\\
 \noindent\href{mailto:barbara.alvarez.gonzalez@cern.ch}{Barbara Alvarez Gonzalez} 
 \emph{CERN, Switzerland}\\
 \noindent\href{mailto:Jeremy.Andrea@cern.ch}{Jeremy Andrea} 
@@ -10,15 +10,15 @@
 \emph{University of Montreal and TRIUMF, Canada}\\
 \noindent\href{mailto:Patrizia.Azzi@cern.ch}{Patrizia Azzi} 
 \emph{INFN Padova, Italy}\\
-\noindent\href{mailto:mbackovic@gmail.com}{Mihailo Backovic} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:mihailo.backovic@uclouvain.be}{Mihailo Backovi\'{c}} 
+\emph{Centre for Cosmology, Particle Physics and Phenomenology (CP3), Universit\'e catholique de Louvain, Belgium}\\
 \noindent\href{mailto:yangbai@physics.wisc.edu}{Yang Bai} 
 \emph{Department of Physics, University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:swagato.banerjee@cern.ch}{Swagato Banerjee} 
 \emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:Alexander.Belyaev@cern.ch}{Alexander Belyaev} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
-\noindent\href{mailto:antonio.boveia@cern.ch}{Antonio Boveia} 
+\noindent\href{mailto:antonio.boveia@cern.ch}{Antonio Boveia (editor)} 
 \emph{CERN, Switzerland}\\
 \noindent\href{mailto:amelia.jean.brennan@cern.ch}{Amelia Jean Brennan} 
 \emph{The University of Melbourne, Australia}\\
@@ -27,7 +27,7 @@
 \noindent\href{mailto:mbuckley@physics.rutgers.edu}{Matthew R. Buckley} 
 \emph{Department of Physics and Astronomy, Rutgers University, USA}\\
 \noindent\href{mailto:giorgio.busoni@sissa.it}{Giorgio Busoni} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{SISSA and INFN, Sezione di Trieste, Italy}\\
 \noindent\href{mailto:Michael.Buttignol@cern.ch}{Michael Buttignol} 
 \emph{Institut Pluridisciplinaire Hubert Curien/D\'epartement Recherches Subatomiques, Universit\'e de Strasbourg/CNRS-IN2P3, France}\\
 \noindent\href{mailto:cacciapa@ipnl.in2p3.fr}{Giacomo Cacciapaglia} 
@@ -36,8 +36,8 @@
 \emph{Santa Cruz Institute for Particle Physics, Department of Physics and Department of Astronomy and Astrophysics, University of California at Santa Cruz, USA}\\
 \noindent\href{mailto:lmc@physics.osu.edu}{Linda Carpenter} 
 \emph{Ohio State University, USA}\\
-\noindent\href{mailto:Mingshui.Chen@cern.ch}{Mingshui Chen} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:john.paul.chou@cern.ch}{John Paul Chou} 
+\emph{Rutgers University, NO COUNTRY}\\
 \noindent\href{mailto:arely.cortes.gonzalez@cern.ch}{Arely Cortes Gonzalez} 
 \emph{IFAE Barcelona, Spain}\\
 \noindent\href{mailto:christopher.cowden@cern.ch}{Chris Cowden} 
@@ -47,39 +47,39 @@
 \noindent\href{mailto:annapaola.de.cosa@cern.ch}{Annapaola De Cosa} 
 \emph{University of Zurich, Switzerland}\\
 \noindent\href{mailto:michele.degruttola@cern.ch}{Michele De Gruttola} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{CERN, Switzerland}\\
 \noindent\href{mailto:andrea.desimone@sissa.it}{Andrea De Simone} 
 \emph{SISSA and INFN, Sezione di Trieste, Italy}\\
 \noindent\href{mailto:deandrea@ipnl.in2p3.fr}{Aldo Deandrea} 
 \emph{Universit\'e de Lyon and Universit\'e Lyon 1, CNRS/IN2P3, UMR5822, IPNL, France}\\
 \noindent\href{mailto:adifranz@uci.edu}{Anthony DiFranzo} 
 \emph{Department of Physics and Astronomy, University of California, Irvine and Theoretical Physics Department, Fermilab, USA}\\
-\noindent\href{mailto:caterina.doglioni@cern.ch}{Caterina Doglioni} 
+\noindent\href{mailto:caterina.doglioni@cern.ch}{Caterina Doglioni (editor)} 
 \emph{Lund University, Sweden}\\
 \noindent\href{mailto:tdupree.cms@gmail.com}{Tristan du Pree} 
 \emph{CERN, Switzerland}\\
-\noindent\href{mailto:Johannes.Erdmann@cern.ch}{Johannes Erdmann} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:cfischer@ifae.es}{Cora Fischer} 
 \emph{IFAE Barcelona, Spain}\\
-\noindent\href{mailto:pjfox@fnal.gov}{Patrick Fox} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:pjfox@fnal.gov}{Patrick J. Fox} 
+\emph{Fermilab, USA}\\
 \noindent\href{mailto:Benjamin.Fuks@cern.ch}{Benjamin Fuks} 
 \emph{Institut Pluridisciplinaire Hubert Curien/D\'epartement Recherches Subatomiques, Universit\'e de Strasbourg/CNRS-IN2P3, France}\\
 \noindent\href{mailto:genest@lpsc.in2p3.fr}{Marie-Helene Genest} 
 \emph{LPSC, Université Grenoble-Alpes, CNRS/IN2P3, France}\\
 \noindent\href{mailto:Bhawna.Gomber@cern.ch}{Bhawna Gomber} 
 \emph{University of Wisconsin-Madison, USA}\\
+\noindent\href{mailto:Andreas.Goudelis@oeaw.ac.at}{Andreas Goudelis} 
+\emph{Institut f\"ur Hochenergiephysik, \"Osterreichische Akademie der Wissenschaften, Austria}\\
 \noindent\href{mailto:johanna.gramling@cern.ch}{Johanna Gramling} 
 \emph{Universit\'e de Gen\`eve, Ecole de Physique, Switzerland}\\
 \noindent\href{mailto:gunion@physics.ucdavis.edu}{John Gunion} 
 \emph{University of California, Davis, USA}\\
 \noindent\href{mailto:kristian.hahn@cern.ch}{Kristian Hahn} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Northwestern University, USA}\\
 \noindent\href{mailto:ulrich.haisch@physics.ox.ac.uk}{Ulrich Haisch} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
-\noindent\href{mailto:philip.coleman.harris@cern.ch}{Philip Coleman Harris} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:philip.coleman.harris@cern.ch}{Philip C. Harris} 
+\emph{CERN, Switzerland}\\
 \noindent\href{mailto:Kerstin.Hoepfner@cern.ch}{Kerstin Hoepfner} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:siew.yan.hoh@cern.ch}{Siew Yan Hoh} 
@@ -93,9 +93,9 @@
 \noindent\href{mailto:Xiangyang.Ju@cern.ch}{Xiangyang Ju} 
 \emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:felix.kahlhoefer@desy.de}{Felix Kahlhoefer} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{DESY, Germany}\\
 \noindent\href{mailto:Alexis.Kalogeropoulos@cern.ch}{Alexis Kalogeropoulos} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Deutsches Elektronen-Synchrotron (DESY), Germany}\\
 \noindent\href{mailto:laser.seymour.kaplan@cern.ch}{Laser Seymour Kaplan} 
 \emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:Lashkar.Kashif@cern.ch}{Lashkar Kashif} 
@@ -120,14 +120,12 @@
 \emph{Department of Physics, University of Tokyo, Japan}\\
 \noindent\href{mailto:tongylin@gmail.com}{Tongyan Lin} 
 \emph{Kavli Institute for Cosmological Physics, University of Chicago, USA}\\
-\noindent\href{mailto:steven.lowette@cern.ch}{Steven Lowette} 
+\noindent\href{mailto:steven.lowette@cern.ch}{Steven Lowette (editor)} 
 \emph{Vrije Universiteit Brussel - IIHE, Belgium}\\
 \noindent\href{mailto:romain.madar@cern.ch}{Romain Madar} 
 \emph{Laboratoire de Physique Corpusculaire, Clermont-Ferrand, France}\\
-\noindent\href{mailto:sarah.malik@cern.ch}{Sarah Malik} 
+\noindent\href{mailto:sarah.malik@cern.ch}{Sarah Malik (editor)} 
 \emph{Imperial College London, United Kingdom}\\
-\noindent\href{mailto:Fabio.Maltoni@cern.ch}{Fabio Maltoni} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:mmp@ifae.es}{Mario Martinez Perez} 
 \emph{IFAE Barcelona, Spain}\\
 \noindent\href{mailto:o.p.c.mattelaer@durham.ac.uk}{Olivier Mattelaer} 
@@ -140,9 +138,9 @@
 \emph{Laboratoire de Physique Corpusculaire, Clermont-Ferrand, France}\\
 \noindent\href{mailto:enrico.morgante@unige.ch}{Enrico Morgante} 
 \emph{Department of Theoretical Physics, University of Geneva, Switzerland}\\
-\noindent\href{mailto:mrenna@fnal.gov}{Steve Mrenna} 
+\noindent\href{mailto:mrenna@fnal.gov}{Stephen Mrenna (editor)} 
 \emph{FNAL, USA}\\
-\noindent\href{mailto:siddharth.m.narayanan@cern.ch}{Siddharth M Narayanan} 
+\noindent\href{mailto:siddharth.m.narayanan@cern.ch}{Siddharth M. Narayanan} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:andrew.james.nelson@cern.ch}{Andy Nelson} 
 \emph{University of California, Irvine, USA}\\
@@ -172,14 +170,18 @@
 \emph{Rudolf Peierls Centre for Theoretical Physics, University of Oxford, United Kingdom}\\
 \noindent\href{mailto:antonio.riotto@unige.ch}{Antonio Riotto} 
 \emph{Department of Theoretical Physics, University of Geneva, Switzerland}\\
+\noindent\href{mailto:rizzo@slac.stanford.edu}{Thomas G. Rizzo} 
+\emph{SLAC, USA}\\
 \noindent\href{mailto:rainer.roehrig@cern.ch}{Rainer Roehrig} 
 \emph{Max-Planck-Institut für Physik, Germany}\\
 \noindent\href{mailto:David.Salek@cern.ch}{David Salek} 
 \emph{Nikhef and GRAPPA, The Netherlands}\\
 \noindent\href{mailto:Arturo.Rodolfo.Sanchez.Pineda@cern.ch}{Arturos Sanchez Pineda} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:s.sarkar1@physics.ox.ac.uk}{Subir Sarkar} 
+\emph{Rudolf Peierls Centre for Theoretical Physics, University of Oxford, United Kingdom, and Niels Bohr Institute, Copenhagen, Denmark}\\
 \noindent\href{mailto:Alexander.Schmidt@cern.ch}{Alexander Schmidt} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{University of Hamburg, Germany}\\
 \noindent\href{mailto:Steven.Schramm@cern.ch}{Steven Randolph Schramm} 
 \emph{Université de Genève, Switzerland}\\
 \noindent\href{mailto:will.shepherd@gmail.com}{William Shepherd} 
@@ -188,18 +190,18 @@
 \emph{Chulalongkorn University, Thailand}\\
 \noindent\href{mailto:Livia.Soffi@cern.ch}{Livia Soffi} 
 \emph{Cornell University, USA}\\
-\noindent\href{mailto:Norraphat.Srimanobhas@cern.ch}{Phat Srimanobhas} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Norraphat.Srimanobhas@cern.ch}{Norraphat Srimanobhas} 
+\emph{Chulalongkorn University, Faculty of Science, Department of Physics, Thailand}\\
 \noindent\href{mailto:kevin.kai.hong.sung@cern.ch}{Kevin Sung} 
 \emph{Northwestern University, USA}\\
-\noindent\href{mailto:ttait@uci.edu}{Tim Tait} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:ttait@uci.edu}{Tim M. P. Tait} 
+\emph{Department of Physics and Astronomy, University of California, Irvine, USA}\\
 \noindent\href{mailto:Timothee.Theveneaux-Pelzer@cern.ch}{Timothee Theveneaux-Pelzer} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:M.C.Thomas@soton.ac.uk}{Marc Thomas} 
 \emph{Southampton University, United Kingdom}\\
 \noindent\href{mailto:Daniele.Trocino@cern.ch}{Daniele Trocino} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Northeastern University, Boston, USA}\\
 \noindent\href{mailto:sonaina.undleeb@ttu.edu}{Sonaina Undleeb} 
 \emph{Texas Tech University, USA}\\
 \noindent\href{mailto:alessandro.vichi@cern.ch}{Alessandro Vichi} 
@@ -210,14 +212,16 @@
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:renjie.wang@cern.ch}{Ren-Jie Wang} 
 \emph{Department of Physics, Northeastern University, USA}\\
+\noindent\href{mailto:steven.worm@cern.ch}{Steve Worm} 
+\emph{Particle Physics Department, Rutherford Appleton Laboratory, United Kingdom}\\
 \noindent\href{mailto:mengqing.wu@cern.ch}{Mengqing Wu} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Laboratoire de Physique Subatomique et de Cosmologie, Universit\'e Grenoble-Alpes, CNRS/IN2P3, France}\\
 \noindent\href{mailto:sau.lan.wu@cern.ch}{Sau Lan Wu} 
 \emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:Hongtao.Yang@cern.ch}{Hongtao Yang} 
 \emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:Yong.Yang@cern.ch}{Yong Yang} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Universit\"at Zurich, Switzerland}\\
 \noindent\href{mailto:Shin-Shan.Yu@cern.ch}{Shin-Shan Yu} 
 \emph{National Central University, Taiwan}\\
 \noindent\href{mailto:bryan.zaldivar@ulb.ac.be}{Bryan Zaldivar} 
