Fix small error in JP's entry.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@384 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -37,7 +37,7 @@
 \noindent\href{mailto:lmc@physics.osu.edu}{Linda Carpenter} 
 \emph{Ohio State University, USA}\\
 \noindent\href{mailto:john.paul.chou@cern.ch}{John Paul Chou} 
-\emph{Rutgers University, NO COUNTRY}\\
+\emph{Rutgers University, USA}\\
 \noindent\href{mailto:arely.cortes.gonzalez@cern.ch}{Arely Cortes Gonzalez} 
 \emph{IFAE Barcelona, Spain}\\
 \noindent\href{mailto:christopher.cowden@cern.ch}{Chris Cowden} 
@@ -58,6 +58,8 @@
 \emph{Lund University, Sweden}\\
 \noindent\href{mailto:tdupree.cms@gmail.com}{Tristan du Pree} 
 \emph{CERN, Switzerland}\\
+\noindent\href{mailto:Johannes.Erdmann@cern.ch}{Johannes Erdmann} 
+\emph{Institut f\"ur Experimentelle Physik IV, Technische Universit\"at Dortmund, Germany}\\
 \noindent\href{mailto:cfischer@ifae.es}{Cora Fischer} 
 \emph{IFAE Barcelona, Spain}\\
 \noindent\href{mailto:pjfox@fnal.gov}{Patrick J. Fox} 
