--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -39,18 +39,18 @@ based on collider data~\footnote{Comparisons between constraints from different 
 	however this is a point that should be developed further after the conclusion of the work of this Forum.}. 
 Experiments that directly probe the nucleon-dark matter scattering cross section 
 are testing the regime of small momentum transfers, where the EFT approximation typically holds.  
-Collider experiments, though, are sensitive to large momentum transfers: this is a regime where careful 
-treatment is necessary since the condition of applicability of the EFT may not hold.\footnote{
-Furthermore, mapping EFT results from high to low momentum requires the use of the renormalization group, 
-see Ref.~\cite{Hill:2014yka,D'Eramo:2014aba} for a thorough discussion.}
-Therefore, especially in the case when constraints from different experiments are compared, 
-we suggest to assess the applicability of EFT benchmark models, rather than abandon them.
-%As we have learned, EFTs do not truly represent a model-independent representation of the data for the current collider sensitivity.
-%Until the various communities have agreed upon how to present this comparison, 
-Therefore, whenever EFT models are used and especially in comparison to constraints from other experiments,
-collider experiments should present their results as a function of the
-fraction of events for which the EFT approximation holds, according to one of the several prescriptions in the 
-literature~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}.
+Collider experiments, though, are sensitive to large momentum transfers: 
+
+
+
+“a regime where careful treatment is necessary, 
+since the EFT may not capture features of models with finite mediator masses.2  In particular, it is the events corresponding to the highest momentum
+transfer which are the most likely to differ between the EFT treatment and a simplified model
+containing a light mediator.  Therefore, whenever EFT models are used and especially in comparison to constraints from other experiments~\footnote{
+	Furthermore, mapping EFT results from high to low momentum requires the use of the renormalization group, 
+	see Ref.~\cite{Hill:2014yka,D'Eramo:2014aba} for a thorough discussion.}
+, collider experiments should apply a truncation procedure which removes the highest momentum transfer events from the analysis (according to one of the several prescriptions in the literature~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa})
+and should present their results as a function of the truncation parameter.”
 
 We first illustrate the complications
 that can arise with EFTs at colliders by considering an effective interaction
